// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main snapshot renders with teacher instructions, prompt and rationale even if not set 1`] = `
<div>
  <ConfigLayout
    settings={
      <Panel
        configuration={
          Object {
            "maxLengthPerChoice": Object {
              "label": "Maximum Length Per Choice",
              "settings": true,
            },
            "partialScoring": Object {
              "label": "Allow Partial Scoring",
              "settings": false,
            },
            "playerSpellCheck": Object {
              "enabled": true,
              "label": "Student Spellcheck",
              "settings": true,
            },
            "prompt": Object {
              "label": "Prompt",
              "settings": true,
            },
            "rationale": Object {
              "label": "Rationale",
              "settings": true,
            },
            "spellCheck": Object {
              "enabled": true,
              "label": "Spellcheck",
              "settings": false,
            },
            "teacherInstructions": Object {
              "label": "Teacher Instructions",
              "settings": true,
            },
          }
        }
        groups={
          Object {
            "Properties": Object {
              "playerSpellCheckEnabled": undefined,
              "promptEnabled": undefined,
              "rationaleEnabled": undefined,
              "spellCheckEnabled": false,
              "teacherInstructionsEnabled": undefined,
            },
            "Settings": Object {
              "maxLengthPerChoiceEnabled": undefined,
              "partialScoring": false,
            },
          }
        }
        model={
          Object {
            "choices": Object {
              "0": Array [
                Object {
                  "label": "cow",
                  "value": "0",
                },
                Object {
                  "label": "cattle",
                  "value": "1",
                },
                Object {
                  "label": "calf",
                  "value": "2",
                },
              ],
              "1": Array [
                Object {
                  "label": "over",
                  "value": "0",
                },
                Object {
                  "label": "past",
                  "value": "1",
                },
                Object {
                  "label": "beyond",
                  "value": "2",
                },
              ],
              "2": Array [
                Object {
                  "label": "moon",
                  "value": "0",
                },
              ],
            },
            "disabled": false,
            "displayType": "block",
            "markup": "<p>The {{0}} jumped {{1}} the {{2}}</p>",
            "maxLengthPerChoice": Array [
              6,
              6,
              4,
            ],
            "maxLengthPerChoiceEnabled": true,
            "mode": "gather",
            "playerSpellCheckEnabled": true,
            "prompt": "Complete the sentence",
            "promptEnabled": true,
            "rationaleEnabled": true,
            "shuffle": true,
            "slateMarkup": "<p>The <span data-type=\\"explicit_constructed_response\\" data-index=\\"0\\" data-value=\\"cow\\"></span> jumped <span data-type=\\"explicit_constructed_response\\" data-index=\\"1\\" data-value=\\"over\\"></span> the <span data-type=\\"explicit_constructed_response\\" data-index=\\"2\\" data-value=\\"moon\\"></span></p>",
            "spellCheckEnabled": true,
            "studentInstructionsEnabled": true,
            "teacherInstructionsEnabled": true,
            "toolbarEditorPosition": "bottom",
          }
        }
        onChangeConfiguration={[Function]}
        onChangeModel={[Function]}
      />
    }
  >
    <div>
      <InputContainer
        label="Teacher Instructions"
      >
        <EditableHtml
          markup=""
          nonEmpty={false}
          onChange={[Function]}
          spellCheck={true}
          toolbarOpts={
            Object {
              "position": "bottom",
            }
          }
        />
      </InputContainer>
      <InputContainer
        label="Prompt"
      >
        <EditableHtml
          disableUnderline={true}
          markup="Complete the sentence"
          nonEmpty={false}
          onChange={[Function]}
          spellCheck={true}
          toolbarOpts={
            Object {
              "position": "bottom",
            }
          }
        />
      </InputContainer>
      <div>
        <WithStyles(Typography)>
          Define Template, Choices, and Correct Responses
        </WithStyles(Typography)>
        <WithStyles(Tooltip)
          classes={
            Object {
              "tooltip": undefined,
            }
          }
          disableFocusListener={true}
          disableTouchListener={true}
          placement="right"
          title="Validation requirements:
The response area content should not be empty and should be unique.
There should be at least 1 response area defined."
        >
          <pure(InfoIcon)
            color="primary"
            fontSize="small"
            style={
              Object {
                "marginLeft": "5px",
              }
            }
          />
        </WithStyles(Tooltip)>
      </div>
      <EditableHtml
        disabled={false}
        highlightShape={false}
        markup="<p>The <span data-type=\\"explicit_constructed_response\\" data-index=\\"0\\" data-value=\\"cow\\"></span> jumped <span data-type=\\"explicit_constructed_response\\" data-index=\\"1\\" data-value=\\"over\\"></span> the <span data-type=\\"explicit_constructed_response\\" data-index=\\"2\\" data-value=\\"moon\\"></span></p>"
        onChange={[Function]}
        responseAreaProps={
          Object {
            "error": [Function],
            "maxResponseAreas": undefined,
            "onHandleAreaChange": [Function],
            "options": Object {
              "duplicates": true,
            },
            "respAreaToolbar": [Function],
            "type": "explicit-constructed-response",
          }
        }
        spellCheck={true}
        toolbarOpts={
          Object {
            "position": "top",
          }
        }
      />
      <WithStyles(Typography)>
        Define Alternates and Character Limits
      </WithStyles(Typography)>
      <AlternateResponses
        choicesErrors={Object {}}
        maxLengthPerChoiceEnabled={true}
        model={
          Object {
            "choices": Object {
              "0": Array [
                Object {
                  "label": "cow",
                  "value": "0",
                },
                Object {
                  "label": "cattle",
                  "value": "1",
                },
                Object {
                  "label": "calf",
                  "value": "2",
                },
              ],
              "1": Array [
                Object {
                  "label": "over",
                  "value": "0",
                },
                Object {
                  "label": "past",
                  "value": "1",
                },
                Object {
                  "label": "beyond",
                  "value": "2",
                },
              ],
              "2": Array [
                Object {
                  "label": "moon",
                  "value": "0",
                },
              ],
            },
            "disabled": false,
            "displayType": "block",
            "markup": "<p>The {{0}} jumped {{1}} the {{2}}</p>",
            "maxLengthPerChoice": Array [
              6,
              6,
              4,
            ],
            "maxLengthPerChoiceEnabled": true,
            "mode": "gather",
            "playerSpellCheckEnabled": true,
            "prompt": "Complete the sentence",
            "promptEnabled": true,
            "rationaleEnabled": true,
            "shuffle": true,
            "slateMarkup": "<p>The <span data-type=\\"explicit_constructed_response\\" data-index=\\"0\\" data-value=\\"cow\\"></span> jumped <span data-type=\\"explicit_constructed_response\\" data-index=\\"1\\" data-value=\\"over\\"></span> the <span data-type=\\"explicit_constructed_response\\" data-index=\\"2\\" data-value=\\"moon\\"></span></p>",
            "spellCheckEnabled": true,
            "studentInstructionsEnabled": true,
            "teacherInstructionsEnabled": true,
            "toolbarEditorPosition": "bottom",
          }
        }
        onChange={[Function]}
        onLengthChange={[Function]}
        spellCheck={true}
      />
      <InputContainer
        label="Rationale"
      >
        <EditableHtml
          markup=""
          onChange={[Function]}
          spellCheck={true}
          toolbarOpts={
            Object {
              "position": "bottom",
            }
          }
        />
      </InputContainer>
    </div>
  </ConfigLayout>
</div>
`;

exports[`Main snapshot renders without teacher instructions, prompt and rationale 1`] = `
<div>
  <ConfigLayout
    settings={
      <Panel
        configuration={
          Object {
            "maxLengthPerChoice": Object {
              "label": "Maximum Length Per Choice",
              "settings": true,
            },
            "partialScoring": Object {
              "label": "Allow Partial Scoring",
              "settings": false,
            },
            "playerSpellCheck": Object {
              "enabled": true,
              "label": "Student Spellcheck",
              "settings": true,
            },
            "prompt": Object {
              "label": "Prompt",
              "settings": true,
            },
            "rationale": Object {
              "label": "Rationale",
              "settings": true,
            },
            "spellCheck": Object {
              "enabled": true,
              "label": "Spellcheck",
              "settings": false,
            },
            "teacherInstructions": Object {
              "label": "Teacher Instructions",
              "settings": true,
            },
          }
        }
        groups={
          Object {
            "Properties": Object {
              "playerSpellCheckEnabled": undefined,
              "promptEnabled": undefined,
              "rationaleEnabled": undefined,
              "spellCheckEnabled": false,
              "teacherInstructionsEnabled": undefined,
            },
            "Settings": Object {
              "maxLengthPerChoiceEnabled": undefined,
              "partialScoring": false,
            },
          }
        }
        model={
          Object {
            "choices": Object {
              "0": Array [
                Object {
                  "label": "cow",
                  "value": "0",
                },
                Object {
                  "label": "cattle",
                  "value": "1",
                },
                Object {
                  "label": "calf",
                  "value": "2",
                },
              ],
              "1": Array [
                Object {
                  "label": "over",
                  "value": "0",
                },
                Object {
                  "label": "past",
                  "value": "1",
                },
                Object {
                  "label": "beyond",
                  "value": "2",
                },
              ],
              "2": Array [
                Object {
                  "label": "moon",
                  "value": "0",
                },
              ],
            },
            "disabled": false,
            "displayType": "block",
            "markup": "<p>The {{0}} jumped {{1}} the {{2}}</p>",
            "maxLengthPerChoice": Array [
              6,
              6,
              4,
            ],
            "maxLengthPerChoiceEnabled": true,
            "mode": "gather",
            "playerSpellCheckEnabled": true,
            "prompt": "Complete the sentence",
            "promptEnabled": false,
            "rationaleEnabled": false,
            "shuffle": true,
            "slateMarkup": "<p>The <span data-type=\\"explicit_constructed_response\\" data-index=\\"0\\" data-value=\\"cow\\"></span> jumped <span data-type=\\"explicit_constructed_response\\" data-index=\\"1\\" data-value=\\"over\\"></span> the <span data-type=\\"explicit_constructed_response\\" data-index=\\"2\\" data-value=\\"moon\\"></span></p>",
            "spellCheckEnabled": true,
            "studentInstructionsEnabled": true,
            "teacherInstructionsEnabled": false,
            "toolbarEditorPosition": "bottom",
          }
        }
        onChangeConfiguration={[Function]}
        onChangeModel={[Function]}
      />
    }
  >
    <div>
      <div>
        <WithStyles(Typography)>
          Define Template, Choices, and Correct Responses
        </WithStyles(Typography)>
        <WithStyles(Tooltip)
          classes={
            Object {
              "tooltip": undefined,
            }
          }
          disableFocusListener={true}
          disableTouchListener={true}
          placement="right"
          title="Validation requirements:
The response area content should not be empty and should be unique.
There should be at least 1 response area defined."
        >
          <pure(InfoIcon)
            color="primary"
            fontSize="small"
            style={
              Object {
                "marginLeft": "5px",
              }
            }
          />
        </WithStyles(Tooltip)>
      </div>
      <EditableHtml
        disabled={false}
        highlightShape={false}
        markup="<p>The <span data-type=\\"explicit_constructed_response\\" data-index=\\"0\\" data-value=\\"cow\\"></span> jumped <span data-type=\\"explicit_constructed_response\\" data-index=\\"1\\" data-value=\\"over\\"></span> the <span data-type=\\"explicit_constructed_response\\" data-index=\\"2\\" data-value=\\"moon\\"></span></p>"
        onChange={[Function]}
        responseAreaProps={
          Object {
            "error": [Function],
            "maxResponseAreas": undefined,
            "onHandleAreaChange": [Function],
            "options": Object {
              "duplicates": true,
            },
            "respAreaToolbar": [Function],
            "type": "explicit-constructed-response",
          }
        }
        spellCheck={true}
        toolbarOpts={
          Object {
            "position": "top",
          }
        }
      />
      <WithStyles(Typography)>
        Define Alternates and Character Limits
      </WithStyles(Typography)>
      <AlternateResponses
        choicesErrors={Object {}}
        maxLengthPerChoiceEnabled={true}
        model={
          Object {
            "choices": Object {
              "0": Array [
                Object {
                  "label": "cow",
                  "value": "0",
                },
                Object {
                  "label": "cattle",
                  "value": "1",
                },
                Object {
                  "label": "calf",
                  "value": "2",
                },
              ],
              "1": Array [
                Object {
                  "label": "over",
                  "value": "0",
                },
                Object {
                  "label": "past",
                  "value": "1",
                },
                Object {
                  "label": "beyond",
                  "value": "2",
                },
              ],
              "2": Array [
                Object {
                  "label": "moon",
                  "value": "0",
                },
              ],
            },
            "disabled": false,
            "displayType": "block",
            "markup": "<p>The {{0}} jumped {{1}} the {{2}}</p>",
            "maxLengthPerChoice": Array [
              6,
              6,
              4,
            ],
            "maxLengthPerChoiceEnabled": true,
            "mode": "gather",
            "playerSpellCheckEnabled": true,
            "prompt": "Complete the sentence",
            "promptEnabled": false,
            "rationaleEnabled": false,
            "shuffle": true,
            "slateMarkup": "<p>The <span data-type=\\"explicit_constructed_response\\" data-index=\\"0\\" data-value=\\"cow\\"></span> jumped <span data-type=\\"explicit_constructed_response\\" data-index=\\"1\\" data-value=\\"over\\"></span> the <span data-type=\\"explicit_constructed_response\\" data-index=\\"2\\" data-value=\\"moon\\"></span></p>",
            "spellCheckEnabled": true,
            "studentInstructionsEnabled": true,
            "teacherInstructionsEnabled": false,
            "toolbarEditorPosition": "bottom",
          }
        }
        onChange={[Function]}
        onLengthChange={[Function]}
        spellCheck={true}
      />
    </div>
  </ConfigLayout>
</div>
`;
